# yaml-schema

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  small.yaml  yaml-schema.yaml
.github/workflows/: build.yaml  ci-tests.yaml  publish-crates.yaml
benches/: ys_vs_boon.rs
features/: basics.feature  cli.feature  composition.feature  conditionals.feature  const.feature  enums.feature  multiple-types.feature  not.feature  objects.feature  one_of.feature
features/validation/: arrays.feature  conditionals.feature  formats.feature  numbers.feature  objects.feature  references.feature  strings.feature  unevaluated.feature
src/: codegen.rs  engine.rs  error.rs  lib.rs  loader.rs  reference.rs  schemas.rs  target.rs  utils.rs  validation.rs
src/schemas/: all_of.rs  any_of.rs  array.rs  base.rs  bool_or_typed.rs  const.rs  enum.rs  format.rs  if_then_else.rs  integer.rs  not.rs  number.rs  numeric.rs  object.rs  one_of.rs  root_schema.rs  string.rs  typed_schema.rs  yaml_schema.rs
src/validation/: annotations.rs  any_of.rs  context.rs  formats.rs  not.rs  objects.rs  one_of.rs  strings.rs
tasks/: discussion-36-plan.md
tests/: basics.rs  cli.rs  external_ref.rs  features.rs  ys_cli_json.rs
tests/fixtures/: instance_with_dollar_schema_invalid.yaml  instance_with_dollar_schema_valid.yaml
